--- a/index.html
+++ b/index.html
@@ -1,67 +1,57 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en-us">
 
 <head>
-	<meta charset="UTF-8">
-	<title>Nicole Lockwood</title>
-	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
-	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+  <meta charset="UTF-8">
+  <title>About | Nicole Lockwood</title>
+  <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
-	<div id="banner">
-		<header>
-			<h1>Nicole Lockwood</h1>
-		</header>
 
-		<ul id="menu">
-			<li><a href="index.html" class="nav">About</a></li>
-			<li><a href="portfolio.html" class="nav">Portfolio</a></li>
-			<li><a href="contact.html" class="nav">Contact</a></li>
-		</ul>
-	</div>
+  <header id="masthead">
+    <div class="container">
+      <a href="index.html" id="logo">Nicole Lockwood</a>
+      <nav>
+        <a href="index.html">About</a>
+        <a href="portfolio.html">Portfolio</a>
+        <a href="contact.html">Contact</a>
+      </nav>
+    </div>
+  </header>
 
-	<div>
-	<div class="container">
+  <div id="main-container" class="container">
+    <section class="main-section">
+      <h1>About Me</h1>
 
-		<div class="section-head" id="about-head">
-			<h2>About Me</h2>
-		</div>
+      <img src="assets/images/Profile_Image.jpg" class="auth-image" alt="Nicole Lockwood">
 
-		<section id="about-me">
-			<img id="bio-image" src="https://github.com/lockwoni/Basic-Portfolio/blob/master/assets/images/Profile_Image.jpg?raw=true" alt="Nicole Lockwood">
+      <p>In 2014, I earned a Master of Public Health degree from the University of Michigan School of Public Health. Through the program, I developed skills relevant to my desire to promote sexual and reproductive health and drive to have a measurable impact among those unable to access health care. Now, I possess competency in program development, planning, implementation, and evaluation, as well as in research methods and health communication.</p>
+      
+      <p>Over the past seven years, I have gained public health experience in research, evaluation, and project management throughout six states (AL, GA, MI, MS, NJ, TX) and four countries (Kenya, Tanzania, U.S., Zambia).</p>
+      
+      <p>To better serve and reach youth with public health interventions, I am currently pursuing a Full Stack Flex Web Development certificate.</p>
 
-			<p>In 2014, I earned a Master of Public Health degree from the University of Michigan School of Public Health. Through the program, I developed skills relevant to my desire to promote sexual and reproductive health and drive to have a measurable impact among those unable to access health care. Now, I possess competency in program development, planning, implementation, and evaluation, as well as in research methods and health communication.</p>
-			<br>
-			<p>Over the past seven years, I have gained public health experience in research, evaluation, and project management throughout six states (AL, GA, MI, MS, NJ, TX) and four countries (Kenya, Tanzania, U.S., Zambia).</p>
-			<br>
-			<p>To better serve and reach youth with public health interventions, I am currently pursuing a Full Stack Flex Web Development certificate.</p>
-		</section>
-		</div>
+    </section>
 
-	<div class="container2">
-		<div class="section-head" id="connect-head">
-			<h2>Connect with Me</h2>
-		</div>
+    <section class="sidebar">
+      <div id="connect">
+        <h2>Connect with Me</h2>
 
-		<section id="connect">
-			<a href="https://github.com/lockwoni" target="_blank">
-				<img id="GitHub" src="https://github.com/lockwoni/Basic-Portfolio/blob/master/assets/images/Github.png?raw=true" alt="GitHub Link">
-			</a>
+        <a href="https://github.com/lockwoni"  target="_blank"><img src="assets/images/github-128.png" class="social" alt="GitHub" /></a>
+        <a href="https://www.linkedin.com/in/nicolelockwood1"  target="_blank"><img src="assets/images/linkedin-128.png" class="social" alt="LinkedIn" /></a>
+        <a href="http://stackoverflow.com/users/7402335/nlockwood?tab=profile"  target="_blank"><img src="assets/images/stackoverflow-128.png" class="social" alt="Stack Overflow" /></a>
+      </div>
+    </section>
+  </div>
 
-			<a href="https://www.linkedin.com/in/nicolelockwood1" target="_blank">
-				<img id="LinkedIn" src="https://github.com/lockwoni/Basic-Portfolio/blob/master/assets/images/Linkedin.png?raw=true" alt="LinkedIn Link">
-			</a>
-
-			<a href="http://stackoverflow.com/users/7402335/nlockwood?tab=profile" target="_blank">
-				<img id="Stackoverflow" src="https://github.com/lockwoni/Basic-Portfolio/blob/master/assets/images/Stackoverflow.png?raw=true" alt="Stackoverflow Link">
-			</a>
-		</section>
-	</div>
-
-	<footer class="footer">
-		Copyright &reg; 2016 Nicole Lockwood
-	</footer>
-	</div>
+  <footer>
+    <div class="container">
+      Copyright &copy; 2016 Nicole Lockwood
+    </div>
+  </footer>
 </body>
+
 </html>
