--- a/portfolio.html
+++ b/portfolio.html
@@ -1,84 +1,74 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en-us">
 
 <head>
-	<meta charset="UTF-8">
-	<title>Nicole Lockwood</title>
-	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
-	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+  <meta charset="UTF-8">
+  <title>Portfolio | Nicole Lockwood</title>
+  <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
-	<div id="banner">
-		<header>
-			<h1>Nicole Lockwood</h1>
-		</header>
 
-		<ul id="menu">
-			<li><a href="index.html" class="nav">About</a></li>
-			<li><a href="portfolio.html" class="nav">Portfolio</a></li>
-			<li><a href="contact.html" class="nav">Contact</a></li>
-		</ul>
-	</div>
+  <header id="masthead">
+    <div class="container">
+      <a href="index.html" id="logo">Nicole Lockwood</a>
+      <nav>
+        <a href="index.html">About</a>
+        <a href="portfolio.html">Portfolio</a>
+        <a href="contact.html">Contact</a>
+      </nav>
+    </div>
+  </header>
 
-	<div>
-	<div class="container" id="portfolio-div">
+  <div id="main-container" class="container">
+    <section class="main-section">
+      <h1>Portfolio</h1>
 
-		<div class="section-head" id="portfolio-head">
-			<h2>Portfolio</h2>
-		</div>
+      <div class="work">
+        <img src="assets/images/Placeholder_Image.jpg" alt="Placeholder">
 
-		<section id="Portfolio">
-			<div class="img-div">
-				<img class="img-hold" src="https://github.com/lockwoni/Basic-Portfolio/blob/master/assets/images/Placeholder_Image.jpg?raw=true" alt="Placeholder">
-				<h3>Project1</h3>
-			</div>
+        <h3>Hangman</h3>
+      </div>
+      <div class="work">
+        <img src="assets/images/Placeholder_Image.jpg" alt="Placeholder">
 
-			<div class="img-div">
-				<img class="img-hold" src="https://github.com/lockwoni/Basic-Portfolio/blob/master/assets/images/Placeholder_Image.jpg?raw=true" alt="Placeholder">
-				<h3>Project2</h3>
-			</div>
+        <h3>RPG Game</h3>
+      </div>
+      <div class="work">
+        <img src="assets/images/Placeholder_Image.jpg" alt="Placeholder">
 
-			<div class="img-div">
-				<img class="img-hold" src="https://github.com/lockwoni/Basic-Portfolio/blob/master/assets/images/Placeholder_Image.jpg?raw=true" alt="Placeholder">
-				<h3>Project3</h3>
-			</div>
+        <h3>Trivia Game</h3>
+      </div>
+      <div class="work">
+        <img src="assets/images/Placeholder_Image.jpg" alt="Placeholder">
 
-			<div class="img-div">
-				<img class="img-hold" src="https://github.com/lockwoni/Basic-Portfolio/blob/master/assets/images/Placeholder_Image.jpg?raw=true" alt="Placeholder">
-				<h3>Project4</h3>
-			</div>
+        <h3>Rutgers Info Widget</h3>
+      </div>
+      <div class="work">
+        <img src="assets/images/Placeholder_Image.jpg" alt="Placeholder">
 
-			<div class="img-div">
-				<img class="img-hold" src="https://github.com/lockwoni/Basic-Portfolio/blob/master/assets/images/Placeholder_Image.jpg?raw=true" alt="Placeholder">
-				<h3>Project5</h3>
-			</div>
-		</section>
-		</div>
+        <h3>Rock Paper Scissors</h3>
+      </div>
 
-	<div class="container2">
-		<div class="section-head" id="connect-head">
-			<h2>Connect with Me</h2>
-		</div>
+    </section>
 
-		<section id="connect">
-			<a href="https://github.com/lockwoni" target="_blank">
-				<img id="GitHub" src="https://github.com/lockwoni/Basic-Portfolio/blob/master/assets/images/Github.png?raw=true" alt="GitHub Link">
-			</a>
+    <section class="sidebar">
+      <div id="connect">
+        <h2>Connect with Me</h2>
 
-			<a href="https://www.linkedin.com/in/nicolelockwood1" target="_blank">
-				<img id="LinkedIn" src="https://github.com/lockwoni/Basic-Portfolio/blob/master/assets/images/Linkedin.png?raw=true" alt="LinkedIn Link">
-			</a>
+        <a href="https://github.com/lockwoni"  target="_blank"><img src="assets/images/github-128.png" class="social" alt="GitHub" /></a>
+        <a href="https://www.linkedin.com/in/nicolelockwood1" target="_blank"><img src="assets/images/linkedin-128.png" class="social" alt="LinkedIn" /></a>
+        <a href="http://stackoverflow.com/users/7402335/nlockwood?tab=profile"  target="_blank"><img src="assets/images/stackoverflow-128.png" class="social" alt="Stack Overflow" /></a>      </div>
+    </section>
+  </div>
 
-			<a href="http://stackoverflow.com/users/7402335/nlockwood?tab=profile" target="_blank">
-				<img id="Stackoverflow" src="https://github.com/lockwoni/Basic-Portfolio/blob/master/assets/images/Stackoverflow.png?raw=true" alt="Stackoverflow Link">
-			</a>
-		</section>
-	</div>
-
-	<footer class="footer">
-		Copyright &reg; 2016 Nicole Lockwood
-	</footer>
-	</div>
+  <footer>
+    <div class="container">
+      Copyright &copy; 2016 Nicole Lockwood
+    </div>
+  </footer>
 </body>
+
 </html>
